--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion_det.cshtml
@@ -2,15 +2,15 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridView_factura_det";
-        settings.CallbackRouteValues = new { Controller = "Factura", Action = "GridViewPartial_factura_det", Area = "Facturacion"};
+        settings.Name = "GridView_notaCredito_det";
+        settings.CallbackRouteValues = new { Controller = "NotaDeCreditoFacturacion", Action = "GridViewPartial_notaCredito_det", Area = "Facturacion"};
         settings.KeyFieldName = "Secuencia";
 
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Factura", Action = "EditingAddNew", Area = "Facturacion" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Factura", Action = "EditingUpdate", Area = "Facturacion" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Factura", Action = "EditingDelete", Area = "Facturacion" };
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "NotaDeCreditoFacturacion", Action = "EditingAddNew", Area = "Facturacion" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "NotaDeCreditoFacturacion", Action = "EditingUpdate", Area = "Facturacion" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "NotaDeCreditoFacturacion", Action = "EditingDelete", Area = "Facturacion" };
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -59,14 +59,14 @@
             column.SetEditItemTemplateContent(c =>
             {
                 ViewContext.Writer.Write("<div id='ajaxDiv'>");
-                Html.RenderPartial("_CmbProducto_Factura", DataBinder.Eval(c.DataItem, "IdProducto"));
+                Html.RenderPartial("_CmbProducto_NotaDeCreditoFacturacion", DataBinder.Eval(c.DataItem, "IdProducto"));
                 ViewContext.Writer.Write("</div>");
             });
         });
 
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_cantidad";
+            column.FieldName = "sc_cantidad";
             column.Caption = "cantidad";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
@@ -78,7 +78,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_Precio";
+            column.FieldName = "sc_Precio";
             column.Caption = "Precio";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
@@ -91,7 +91,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_PorDescUnitario";
+            column.FieldName = "sc_PordescUni";
             column.Caption = "% Desc. uni.";
             column.Width = Unit.Percentage(10);
             column.EditorProperties().SpinEdit(q =>
@@ -119,7 +119,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_PrecioFinal";
+            column.FieldName = "sc_precioFinal";
             column.Caption = "Precio final";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
@@ -127,7 +127,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_Subtotal";
+            column.FieldName = "sc_subtotal";
             column.Caption = "Subtotal";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
@@ -135,7 +135,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_iva";
+            column.FieldName = "sc_iva";
             column.Caption = "I.V.A.";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
@@ -143,7 +143,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_total";
+            column.FieldName = "sc_total";
             column.Caption = "Total";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
@@ -151,11 +151,10 @@
         });
 
         settings.ClientSideEvents.BeginCallback = "function(s,e){e.customArgs['IdCliente'] = IdCliente.GetValue(); }";
-        settings.ClientSideEvents.EndCallback = "function(s,e){CargarCuotas();}";
 
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "vt_Subtotal").DisplayFormat = "{0:n2}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "vt_iva").DisplayFormat = "{0:n2}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "vt_total").DisplayFormat = "{0:n2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Subtotal").DisplayFormat = "{0:n2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "sc_iva").DisplayFormat = "{0:n2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "sc_total").DisplayFormat = "{0:n2}";
         settings.Settings.ShowFooter = true;
     });
 }
