--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbCliente_NotaCrebitoFacturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbCliente_NotaCrebitoFacturacion.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Factura", Action = "CmbCliente_Factura", Area = "Facturacion" };
+        settings.CallbackRouteValues = new { Controller = "NotaDeCreditoFacturacion", Action = "CmbCliente_NotaCredito", Area = "Facturacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
@@ -18,7 +18,7 @@
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 90);
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente();}";
     })
-    .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_info_bajo_demanda)
+    .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_info_bajo_demanda)
     .Bind(Model.IdCliente);
 
 }
