--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbProducto_NotaCrebitoFacturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_CmbProducto_NotaCrebitoFacturacion.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Factura", Action = "CmbProducto_Factura", Area = "Facturacion" };
+        settings.CallbackRouteValues = new { Controller = "NotaDeCreditoFacturacion", Action = "CmbProducto_NotaCredito", Area = "Facturacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pr_descripcion";
@@ -21,7 +21,7 @@
 
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "SeleccionarLote";
     })
-    .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_list_bajo_demandaProducto,
-    new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_info_bajo_demandaProducto).Bind(Model);
+    .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_list_bajo_demandaProducto,
+    new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeCreditoFacturacionController().get_info_bajo_demandaProducto).Bind(Model);
 }
 @comboBox.GetHtml()
