cambios de recepcion de material

--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Importacion.imp_ordencompra_ext_Info
 @{
-    ViewBag.Title = "Anular gasto";
+    ViewBag.Title = "Anular Orden compra";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
