--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Importacion.imp_ordencompra_ext_Info
 @{
-    ViewBag.Title = "Nueva orden compra al exterior";
+    ViewBag.Title = "Modificar orden compra al exterior";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
