--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/RecepcionOrdenCompra/_GridViewPartial_recepcion_oc_ext.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/RecepcionOrdenCompra/_GridViewPartial_recepcion_oc_ext.cshtml
@@ -66,8 +66,8 @@
                 {
 
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdOrdenCompra_ext = DataBinder.Eval(tc.DataItem, "IdRecepcion") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdOrdenCompra_ext = DataBinder.Eval(tc.DataItem, "IdRecepcion") },
+                Html.ActionLink("Modificar", "Modificar", new { IdRecepcion = DataBinder.Eval(tc.DataItem, "IdRecepcion") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdRecepcion = DataBinder.Eval(tc.DataItem, "IdRecepcion") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
