--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Modificar.cshtml
@@ -229,7 +229,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <<div class="col-md-6">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="rub_grupo">Forma de pago*</label>
                                 @Html.DropDownListFor(q => q.IdCatalogo_forma_pago, new SelectList(ViewBag.lst_forma_pago, "IdCatalogo", "ca_descripcion"), new { @class = "form-control" })
