--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_CruceNC.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_CruceNC.cshtml
@@ -11,6 +11,8 @@
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "NotaDeCreditoFacturacion", Action = "EditingUpdateFactura", Area = "Facturacion" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "NotaDeCreditoFacturacion", Action = "EditingDeleteFactura", Area = "Facturacion" };
 
+        settings.SettingsPager.PageSize = 3;
+
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButton = false;
         settings.CommandColumn.ShowEditButton = true;
