--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionImportacion/_GridViewPartial_gastos_asignados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionImportacion/_GridViewPartial_gastos_asignados.cshtml
@@ -1,64 +1,77 @@
 @using System.Web.UI.WebControls;
 @{
-    var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridViewPartial_orden_compra_ext_det";
-        settings.CallbackRouteValues = new { Controller = "RecepcionOrdencompra", Action = "GridViewPartial_recepcion_oc_ext_det", Area = "Importacion" };
-        settings.KeyFieldName = "Secuencia";
+    var grid = Html.DevExpress().GridView(settings =>
+    {
+        settings.Name = "GridViewPartial_gastos_asignados";
+        settings.CallbackRouteValues = new { Controller = "LiquidacionImportacion", Action = "GridViewPartial_gastos_asignados" };
         settings.Width = Unit.Percentage(100);
-        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "RecepcionOrdencompra", Action = "EditingUpdate", Area = "Importacion" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "RecepcionOrdencompra", Action = "EditingDelete", Area = "Importacion" };
+        settings.KeyFieldName = "IdCbteCble";
 
-        settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowEditButton = true;
-        settings.CommandColumn.ShowDeleteButton = true;
+        //Configuracion cabecera
+        settings.Settings.ShowTitlePanel = true;
+        settings.SettingsText.Title = "Gastos asignados";
 
-        settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsBehavior.EnableCustomizationWindow = true;
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
-        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
+        settings.Settings.ShowFilterRow = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = false;
+
+        //Configuración click derecho
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
+        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
+        settings.SettingsContextMenu.RowMenuItemVisibility.EditRow = false;
+        settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
+
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCells;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
-        //Funcion para inicializar fila al presionar nuevo
-
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
         settings.Columns.Add(column =>
         {
-            column.FieldName = "Secuencia_oc";
-            column.Caption = "Producto";
-            column.Width = Unit.Percentage(60);
-            column.Visible = false;
-
-        });
-
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pr_descripcion";
-            column.Caption = "Producto";
-            column.Width = Unit.Percentage(60);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-
-        });
-
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "od_cantidad";
-            column.Caption = "cantidad O.C";
-            column.Width = Unit.Percentage(15);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-
+            column.FieldName = "pc_Cuenta";
+            column.Caption = "Descripción";
+            column.Width = Unit.Percentage(90);
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "od_cantidad_recepcion";
-            column.Caption = "Cantidad recibida";
-            column.Width = Unit.Percentage(15);
-
+            column.Width = Unit.Percentage(10);
+            column.FieldName = "dc_Valor";
+            column.Caption = "Costo";
         });
+       
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "*";
+            column.FieldName = "Secuencia";
+            column.Width = Unit.Percentage(10);
+            column.UnboundType = DevExpress.Data.UnboundColumnType.String;
+            column.SetDataItemTemplateContent(c =>
+            {
+                Html.DevExpress().Button(settingsBtn =>
+                {
+                    settingsBtn.Name = "btn" + c.KeyValue;
+                    settingsBtn.Text = "Eliminar";
+                    settingsBtn.ClientSideEvents.Click = "function(s, e) {EditingUpdate('" + c.KeyValue + "');}";
+                }).Render();
+            });
+        });
+        settings.PreRender = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
+        };
 
+        settings.BeforeGetCallbackResult = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
+        };
     });
 }
 @grid.Bind(Model).GetHtml()
