--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionImportacion/_GridViewPartial_liquidacion_importacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionImportacion/_GridViewPartial_liquidacion_importacion_det.cshtml
@@ -1,17 +1,11 @@
 @using System.Web.UI.WebControls;
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridViewPartial_orden_compra_ext_det";
-        settings.CallbackRouteValues = new { Controller = "RecepcionOrdencompra", Action = "GridViewPartial_recepcion_oc_ext_det", Area = "Importacion" };
+        settings.Name = "GridViewPartial_liquidacion_importacion_det";
+        settings.CallbackRouteValues = new { Controller = "LiquidacionImportacion", Action = "GridViewPartial_liquidacion_importacion_det", Area = "Importacion" };
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "RecepcionOrdencompra", Action = "EditingUpdate", Area = "Importacion" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "RecepcionOrdencompra", Action = "EditingDelete", Area = "Importacion" };
-
-        settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowEditButton = true;
-        settings.CommandColumn.ShowDeleteButton = true;
 
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
@@ -24,16 +18,6 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
         //Funcion para inicializar fila al presionar nuevo
-
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Secuencia_oc";
-            column.Caption = "Producto";
-            column.Width = Unit.Percentage(60);
-            column.Visible = false;
-
-        });
-
         settings.Columns.Add(column =>
         {
             column.FieldName = "pr_descripcion";
